--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,8 @@ dependencies:
   printing: ^5.12.0
   google_fonts: ^6.1.0
   flutter_speed_dial: ^7.0.0
-
+  flutter_colorpicker: ^1.0.3
+  file_picker: ^6.1.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
