--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   flutter_speed_dial: ^7.0.0
   flutter_colorpicker: ^1.0.3
   file_picker: ^6.1.1
+  share_plus: ^7.2.1
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
