--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,8 +26,8 @@ dependencies:
   share_plus: ^11.0.0
   uuid: ^4.0.0
   open_file: ^3.2.1  
-  supabase_flutter: ^1.10.4
-  uni_links: ^0.5.1
+  supabase_flutter: ^2.9.1
+  app_links: ^6.4.0
 
   
 dev_dependencies:
