--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,9 +25,11 @@ dependencies:
   file_picker: ^10.0.2
   share_plus: ^11.0.0
   uuid: ^4.0.0
-  open_file: ^3.2.1  
   supabase_flutter: ^2.9.1
   app_links: ^6.4.0
+  dio: ^5.4.0
+  permission_handler: ^11.3.0
+  open_filex: ^4.1.1
 
   
 dev_dependencies:
