--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   dio: ^5.4.0
   permission_handler: ^11.3.0
   open_filex: ^4.1.1
+  connectivity_plus: ^5.0.2
+  http: ^1.2.1
 
   
 dev_dependencies:
